# HW2_Debate-between-two-AI-agents

./: .env-example  .gitignore  AGENTS.md  LICENSE  PROMPTS.md  README.md  pyproject.toml
config/: debate.json  motions.json  pricing.json
config/prompts/: debater.system.txt  judge.system.txt  round_eval.system.txt  score.rubric.txt  summarise.system.txt  verdict.schema.json
docs/: HANDOFF_FOR_AGENTS.md  PLAN_HW2.md  PRD_HW2.md  TODO_HW2.md  sample_interactive_terminal_capture.txt
scripts/: dev.py  scan_secrets.py
src/debate/: __init__.py  main.py  runner.py
tests/: conftest.py
tests/integration/: behavioral_edge_wiring.py  conftest.py  debater_stub_helpers.py  echo_child.py  test_behavioral_diversity.py  test_behavioral_json.py  test_behavioral_judge_deadheat.py  test_behavioral_prompts.py  test_behavioral_tools.py  test_budget_abort.py  test_debate_full.py  test_debater_stub_env.py  test_debater_stub_judge.py  test_main_smoke.py  test_network_faults.py  test_network_faults_transient.py  test_network_faults_verdict.py  test_recovery_chaos.py  test_sdk_wired.py  test_security_audit.py  test_supervisor_echo.py
tests/unit/: config_test_data.py  schema_helpers.py  test_agents_security.py  test_base_agent.py  test_budget.py  test_config.py  test_debater_agent.py  test_debater_stress.py  test_gatekeeper.py  test_http_util.py  test_ipc.py  test_llm_client.py  test_logger.py  test_menu.py  test_router_cache.py  test_schemas.py  test_schemas_roundtrip.py  test_schemas_validation.py  test_search_client.py  test_secrets.py  test_select_write.py  test_skills.py  (+4 more)
(+72 files in other folders)
