[project]
name = "debate"
version = "0.1.0"
description = "HW2 — Multi-process AI agent debate system"
readme = "README.md"
authors = [{ name = "JCS1029", email = "lovely.m.2004@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "jsonschema>=4.0",
    "rich>=13.0",
    "tiktoken>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["debate"]

[tool.hatch.build.targets.sdist]
packages = ["debate"]

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests/unit"]
addopts = "-ra -q --strict-markers"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "chaos: chaos / fault-injection tests",
]

[tool.coverage.run]
source = ["src/debate"]

[tool.coverage.report]
fail_under = 0
show_missing = true
